apps/semaphore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
      - name: semaphore
        image: semaphoreui/semaphore:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "1.0"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-svc
  namespace: semaphore
spec:
  selector:
    app: semaphore
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: semaphore
  name: semaphore-ui
  annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: semaphre.director.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: semaphore-svc
            port: 
              name: http
